--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -14,5 +14,12 @@ steps:
       # ⚠️ MAKE SURE THESE MATCH YOUR ACTUAL CLUSTER DETAILS
       - 'CLOUDSDK_COMPUTE_ZONE=us-central1'
       - 'CLOUDSDK_CONTAINER_CLUSTER=my-first-cluster'
+
+    # 👇 4. NEW STEP: Force Kubernetes to update 👇
+  - name: 'gcr.io/cloud-builders/kubectl'
+    args: ['rollout', 'restart', 'deployment/hello-web']
+    env:
+      - 'CLOUDSDK_COMPUTE_ZONE=us-central1'
+      - 'CLOUDSDK_CONTAINER_CLUSTER=my-first-cluster'
 options:
   logging: CLOUD_LOGGING_ONLY
